# RSA_QuickTrade

./: .gitignore  Cdsl_quicktrade_scan.html  Paytm_quicktrade_scan.html  README.md  designprompt.md  pyproject.toml  quicktrade_scan.html  swingtrader.md
config/: default.yaml
src/bsa_quicktrade/: main.py
src/bsa_quicktrade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bsa_quicktrade/analytics/: __init__.py  attribution.py  cli.py  distribution.py  exporter.py  forward_return.py  generate_mock_log.py  health.py  models.py  performance.py  regime.py  report_generator.py  risk.py  run_backtest.py  trade_log.py  utils.py  visualization.py
src/bsa_quicktrade/backtesting/: engine.py
src/bsa_quicktrade/data/: downloader.py
src/bsa_quicktrade/entry/: __init__.py  setup_detector.py
src/bsa_quicktrade/exit/: swing_exit.py
src/bsa_quicktrade/filters/: __init__.py  market_filter.py  relative_strength.py  sector_filter.py
src/bsa_quicktrade/scoring/: swing_score.py
src/rsa_quicktrade/output/: visualization.py
tests/analytics/: test_filters.py  test_forward_return.py  test_swing_exit.py  test_swing_score.py  test_task1.py  test_task2.py  test_task3.py  test_task4.py
